@@ -174,13 +174,13 @@ public class CdChecksums {
             channel[0x00B] != 0x00)
             return null;
 
-//logger.log(Level.TRACE, String.format("CD checksum: Data sector, address %2x:%2x:%2x", channel[0x00C], channel[0x00D], channel[0x00E]));
+//logger.log(Level.TRACE, "CD checksum: Data sector, address %2x:%2x:%2x".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
 
         if ((channel[0x00F] & 0x03) == 0x00) { // mode (1 byte)
-//logger.log(Level.TRACE, String.format("CD checksum: Mode 0 sector at address %2x:%2x:%2x", channel[0x00C], channel[0x00D], channel[0x00E]));
+//logger.log(Level.TRACE, "CD checksum: Mode 0 sector at address %2x:%2x:%2x".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
             for (int i = 0x010; i < 0x930; i++)
                 if (channel[i] != 0x00) {
-logger.log(Level.DEBUG, String.format("CD checksum: Mode 0 sector with error at address: %2x:%2x:%2x", channel[0x00C], channel[0x00D], channel[0x00E]));
+logger.log(Level.DEBUG, "CD checksum: Mode 0 sector with error at address: %2x:%2x:%2x".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
 
                     return false;
                 }
@@ -189,7 +189,7 @@ logger.log(Level.DEBUG, String.format("CD checksum: Mode 0 sector with error at 
         }
 
         if ((channel[0x00F] & 0x03) == 0x01) { // mode (1 byte)
-//logger.log(Level.TRACE, String.format("CD checksum: Mode 1 sector at address %2x:%2x:%2x", channel[0x00C], channel[0x00D], channel[0x00E]));
+//logger.log(Level.TRACE, "CD checksum: Mode 1 sector at address %2x:%2x:%2x".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
 
             if (channel[0x814] != 0x00 || // reserved (8 bytes)
                     channel[0x815] != 0x00 ||
@@ -199,7 +199,7 @@ logger.log(Level.DEBUG, String.format("CD checksum: Mode 0 sector with error at 
                     channel[0x819] != 0x00 ||
                     channel[0x81A] != 0x00 ||
                     channel[0x81B] != 0x00) {
-logger.log(Level.DEBUG, String.format("CD checksum: Mode 1 sector with data in reserved bytes at address: %2x:%2x:%2x", channel[0x00C], channel[0x00D], channel[0x00E]));
+logger.log(Level.DEBUG, "CD checksum: Mode 1 sector with data in reserved bytes at address: %2x:%2x:%2x".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
 
                 return false;
             }
@@ -223,11 +223,11 @@ logger.log(Level.DEBUG, String.format("CD checksum: Mode 1 sector with data in r
             correctEccQ[0] = !failedEccQ;
 
             if (failedEccP) {
-logger.log(Level.DEBUG, String.format("CD checksum: Mode 1 sector at address: %2x:%2x:%2x, fails ECC P check", channel[0x00C], channel[0x00D], channel[0x00E]));
+logger.log(Level.DEBUG, "CD checksum: Mode 1 sector at address: %2x:%2x:%2x, fails ECC P check".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
             }
 
             if (failedEccQ) {
-logger.log(Level.DEBUG, String.format("CD checksum: Mode 1 sector at address: %2x:%2x:%2x, fails ECC Q check", channel[0x00C], channel[0x00D], channel[0x00E]));
+logger.log(Level.DEBUG, "CD checksum: Mode 1 sector at address: %2x:%2x:%2x, fails ECC Q check".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
             }
 
             int storedEdc = ByteUtil.readLeInt(channel, 0x810);
@@ -239,13 +239,13 @@ logger.log(Level.DEBUG, String.format("CD checksum: Mode 1 sector at address: %2
                 return !failedEccP && !failedEccQ;
             }
 
-logger.log(Level.DEBUG, String.format("CD checksum: Mode 1 sector at address: %2x:%2x:%2x, got CRC 0x%08x expected 0x%08x", channel[0x00C], channel[0x00D], channel[0x00E], calculatedEdc, storedEdc));
+logger.log(Level.DEBUG, "CD checksum: Mode 1 sector at address: %2x:%2x:%2x, got CRC 0x%08x expected 0x%08x".formatted(channel[0x00C], channel[0x00D], channel[0x00E], calculatedEdc, storedEdc));
 
             return false;
         }
 
         if ((channel[0x00F] & 0x03) == 0x02) { // mode (1 byte)
-//logger.log(Level.TRACE, String.format("CD checksum: Mode 2 sector at address %2x:%2x:%2x", channel[0x00C], channel[0x00D], channel[0x00E]));
+//logger.log(Level.TRACE, "CD checksum: Mode 2 sector at address %2x:%2x:%2x".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
             byte[] mode2Sector = new byte[channel.length - 0x10];
             System.arraycopy(channel, 0x10, mode2Sector, 0, mode2Sector.length);
 
@@ -280,7 +280,7 @@ logger.log(Level.DEBUG, String.format("CD checksum: Mode 2 form 2 sector at addr
                         channel[0x011] != channel[0x015] ||
                         channel[0x012] != channel[0x016] ||
                         channel[0x013] != channel[0x017]) {
-logger.log(Level.DEBUG, String.format("CD checksum: Subheader copies differ in mode 2 form 1 sector at address: %2x:%2x:%2x", channel[0x00C], channel[0x00D], channel[0x00E]));
+logger.log(Level.DEBUG, "CD checksum: Subheader copies differ in mode 2 form 1 sector at address: %2x:%2x:%2x".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
                 }
 
                 byte[] address = new byte[4];
@@ -297,11 +297,11 @@ logger.log(Level.DEBUG, String.format("CD checksum: Subheader copies differ in m
                 correctEccQ[0] = !failedEccQ;
 
                 if (failedEccP) {
-logger.log(Level.DEBUG, String.format("CD checksum: Mode 2 form 1 sector at address: %2x:%2x:%2x, fails ECC P check", channel[0x00C], channel[0x00D], channel[0x00E]));
+logger.log(Level.DEBUG, "CD checksum: Mode 2 form 1 sector at address: %2x:%2x:%2x, fails ECC P check".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
                 }
 
                 if (failedEccQ) {
-logger.log(Level.DEBUG, String.format("CD checksum: Mode 2 form 1 sector at address: %2x:%2x:%2x, fails ECC Q check", channel[0x00C], channel[0x00D], channel[0x00E]));
+logger.log(Level.DEBUG, "CD checksum: Mode 2 form 1 sector at address: %2x:%2x:%2x, fails ECC Q check".formatted(channel[0x00C], channel[0x00D], channel[0x00E]));
                 }
 
                 int storedEdc = ByteUtil.readLeInt(mode2Sector, 0x808);
@@ -312,13 +312,13 @@ logger.log(Level.DEBUG, String.format("CD checksum: Mode 2 form 1 sector at addr
                 if (calculatedEdc == storedEdc)
                     return !failedEccP && !failedEccQ;
 
-logger.log(Level.DEBUG, String.format("CD checksum: Mode 2 sector at address: %2x:%2x:%2x, got CRC 0x%4$08x expected 0x%5$08x", channel[0x00C], channel[0x00D], channel[0x00E], calculatedEdc, storedEdc));
+logger.log(Level.DEBUG, "CD checksum: Mode 2 sector at address: %2x:%2x:%2x, got CRC 0x%4$08x expected 0x%5$08x".formatted(channel[0x00C], channel[0x00D], channel[0x00E], calculatedEdc, storedEdc));
 
                 return false;
             }
         }
 
-logger.log(Level.DEBUG, String.format("CD checksum: Unknown mode %d sector at address: %2x:%2x:%2x", channel[0x00F], channel[0x00C], channel[0x00D], channel[0x00E]));
+logger.log(Level.DEBUG, "CD checksum: Unknown mode %d sector at address: %2x:%2x:%2x".formatted(channel[0x00F], channel[0x00C], channel[0x00D], channel[0x00E]));
 
         return null;
     }
@@ -485,7 +485,7 @@ logger.log(Level.DEBUG, "CD checksum: Detected User Pack in subchannel");
 
             break;
         default:
-logger.log(Level.DEBUG, String.format("CD checksum: Detected unknown Pack type in subchannel: mode %02x, item %02x", cdSubRwPack1[0] & 0x38, cdSubRwPack1[0] & 0x07));
+logger.log(Level.DEBUG, "CD checksum: Detected unknown Pack type in subchannel: mode %02x, item %02x".formatted(cdSubRwPack1[0] & 0x38, cdSubRwPack1[0] & 0x07));
 
             break;
         }
@@ -496,7 +496,7 @@ logger.log(Level.DEBUG, String.format("CD checksum: Detected unknown Pack type i
         short calculatedQcrc = CRC16CCITTContext.calculate(qSubChannelForCrc);
 
         if (qSubChannelCrc != calculatedQcrc) {
-logger.log(Level.DEBUG, String.format("CD checksum: Q subchannel CRC 0x%04x, expected 0x%04x", calculatedQcrc, qSubChannelCrc));
+logger.log(Level.DEBUG, "CD checksum: Q subchannel CRC 0x%04x, expected 0x%04x".formatted(calculatedQcrc, qSubChannelCrc));
 
             status = false;
         }
@@ -508,7 +508,7 @@ logger.log(Level.DEBUG, String.format("CD checksum: Q subchannel CRC 0x%04x, exp
             short calculatedCdtp1Crc = CRC16CCITTContext.calculate(cdTextPack1ForCrc);
 
             if (cdTextPack1Crc != calculatedCdtp1Crc && cdTextPack1Crc != 0) {
-logger.log(Level.DEBUG, String.format("CD checksum: CD-Text Pack 1 CRC 0x%04x, expected 0x%04x", cdTextPack1Crc, calculatedCdtp1Crc));
+logger.log(Level.DEBUG, "CD checksum: CD-Text Pack 1 CRC 0x%04x, expected 0x%04x".formatted(cdTextPack1Crc, calculatedCdtp1Crc));
 
                 status = false;
             }
@@ -520,10 +520,10 @@ logger.log(Level.DEBUG, String.format("CD checksum: CD-Text Pack 1 CRC 0x%04x, e
             System.arraycopy(cdTextPack2, 0, cdTextPack2ForCrc, 0, 16);
             short calculatedCdtp2Crc = CRC16CCITTContext.calculate(cdTextPack2ForCrc);
 
-logger.log(Level.DEBUG, String.format("CD checksum: Cyclic CDTP2 0x%04x, Calc CDTP2 0x%04x", cdTextPack2Crc, calculatedCdtp2Crc));
+logger.log(Level.DEBUG, "CD checksum: Cyclic CDTP2 0x%04x, Calc CDTP2 0x%04x".formatted(cdTextPack2Crc, calculatedCdtp2Crc));
 
             if (cdTextPack2Crc != calculatedCdtp2Crc && cdTextPack2Crc != 0) {
-logger.log(Level.DEBUG, String.format("CD checksum: CD-Text Pack 2 CRC 0x%04x, expected 0x%04x", cdTextPack2Crc, calculatedCdtp2Crc));
+logger.log(Level.DEBUG, "CD checksum: CD-Text Pack 2 CRC 0x%04x, expected 0x%04x".formatted(cdTextPack2Crc, calculatedCdtp2Crc));
 
                 status = false;
             }
@@ -535,10 +535,10 @@ logger.log(Level.DEBUG, String.format("CD checksum: CD-Text Pack 2 CRC 0x%04x, e
             System.arraycopy(cdTextPack3, 0, cdTextPack3ForCrc, 0, 16);
             short calculatedCdtp3Crc = CRC16CCITTContext.calculate(cdTextPack3ForCrc);
 
-logger.log(Level.DEBUG, String.format("CD checksum: Cyclic CDTP3 0x%04x, Calc CDTP3 0x%04x", cdTextPack3Crc, calculatedCdtp3Crc));
+logger.log(Level.DEBUG, "CD checksum: Cyclic CDTP3 0x%04x, Calc CDTP3 0x%04x".formatted(cdTextPack3Crc, calculatedCdtp3Crc));
 
             if (cdTextPack3Crc != calculatedCdtp3Crc && cdTextPack3Crc != 0) {
-logger.log(Level.DEBUG, String.format("CD checksum: CD-Text Pack 3 CRC 0x%04x, expected 0x%04x", cdTextPack3Crc, calculatedCdtp3Crc));
+logger.log(Level.DEBUG, "CD checksum: CD-Text Pack 3 CRC 0x%04x, expected 0x%04x".formatted(cdTextPack3Crc, calculatedCdtp3Crc));
 
                 status = false;
             }
@@ -552,12 +552,12 @@ logger.log(Level.DEBUG, String.format("CD checksum: CD-Text Pack 3 CRC 0x%04x, e
         System.arraycopy(cdTextPack4, 0, cdTextPack4ForCrc, 0, 16);
         short calculatedCdtp4Crc = CRC16CCITTContext.calculate(cdTextPack4ForCrc);
 
-logger.log(Level.DEBUG, String.format("CD checksum: Cyclic CDTP4 0x%04x, Calc CDTP4 0x%04x", cdTextPack4Crc, calculatedCdtp4Crc));
+logger.log(Level.DEBUG, "CD checksum: Cyclic CDTP4 0x%04x, Calc CDTP4 0x%04x".formatted(cdTextPack4Crc, calculatedCdtp4Crc));
 
         if (cdTextPack4Crc == calculatedCdtp4Crc || cdTextPack4Crc == 0)
             return status;
 
-logger.log(Level.DEBUG, String.format("CD checksum: CD-Text Pack 4 CRC 0x%04x, expected 0x%04x", cdTextPack4Crc, calculatedCdtp4Crc));
+logger.log(Level.DEBUG, "CD checksum: CD-Text Pack 4 CRC 0x%04x, expected 0x%04x".formatted(cdTextPack4Crc, calculatedCdtp4Crc));
 
         return false;
     }
