@@ -81,13 +81,13 @@ public class DiskStream extends SparseStream {
 
     @Override public long position() {
         checkDisposed();
-//logger.log(Level.DEBUG, String.format("GETPOS: %08x", (fileStream.position() - disk.getOffset())));
+//logger.log(Level.DEBUG, "GETPOS: %08x".formatted((fileStream.position() - disk.getOffset())));
         return fileStream.position() - disk.getOffset();
     }
 
     @Override public void position(long value) {
         checkDisposed();
-//logger.log(Level.DEBUG, String.format("SETPOS: %08x", value));
+//logger.log(Level.DEBUG, "SETPOS: %08x".formatted(value));
         fileStream.position(value + disk.getOffset());
         atEof = false;
     }
@@ -101,7 +101,7 @@ public class DiskStream extends SparseStream {
     @Override public int read(byte[] buffer, int offset, int count) {
         checkDisposed();
 //new Exception().printStackTrace(System.err);
-//logger.log(Level.DEBUG, String.format("READ: %08x, %d, %d", fileStream.position(), offset, count));
+//logger.log(Level.DEBUG, "READ: %08x, %d, %d".formatted(fileStream.position(), offset, count));
         if (atEof || fileStream.position() > disk.getLength()) {
             atEof = true;
             throw new dotnet4j.io.IOException("Attempt to read beyond end of file");
