@@ -35,9 +35,10 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
 
-public class StreamTest {
+class StreamTest {
+
     @Test
-    public void attributes() throws Exception {
+    void attributes() throws Exception {
         MemoryStream stream = new MemoryStream();
 
         try (Disk disk = Disk.initializeDynamic(stream, Ownership.Dispose, 16 * 1024L * 1024 * 1024)) {
@@ -49,7 +50,7 @@ public class StreamTest {
     }
 
     @Test
-    public void readWriteSmall() throws Exception {
+    void readWriteSmall() throws Exception {
         MemoryStream stream = new MemoryStream();
 
         try (Disk disk = Disk.initializeDynamic(stream, Ownership.None, 16 * 1024L * 1024 * 1024)) {
@@ -90,7 +91,7 @@ public class StreamTest {
     }
 
     @Test
-    public void readWriteLarge() throws Exception {
+    void readWriteLarge() throws Exception {
         MemoryStream stream = new MemoryStream();
 
         try (Disk disk = Disk.initializeDynamic(stream, Ownership.Dispose, 16 * 1024L * 1024 * 1024)) {
@@ -106,14 +107,14 @@ public class StreamTest {
             s.read(buffer, 0, buffer.length);
             for (int i = 0; i < content.length; ++i) {
                 if (buffer[i] != content[i]) {
-                    fail(String.format("Corrupt stream contents: %d, %02x, %02x", i, buffer[i], content[i]));
+                    fail("Corrupt stream contents: %d, %02x, %02x".formatted(i, buffer[i], content[i]));
                 }
             }
         }
     }
 
     @Test
-    public void disposeTest() throws Exception {
+    void disposeTest() throws Exception {
         Stream contentStream;
         MemoryStream stream = new MemoryStream();
 
@@ -128,7 +129,7 @@ public class StreamTest {
     }
 
     @Test
-    public void readNotPresent() throws Exception {
+    void readNotPresent() throws Exception {
         MemoryStream stream = new MemoryStream();
 
         try (Disk disk = Disk.initializeDynamic(stream, Ownership.Dispose, 16 * 1024L * 1024 * 1024)) {
